--- a/team.html
+++ b/team.html
@@ -7,13 +7,13 @@
     <body>
       <section>
         <div>
-            <h1>Meet the team</h1>
-            <p>Meet our team to serve you</p>
+            <h1 style="color: gray;">Meet the team</h1>
+            <p style="color: brown; font-weight: 400 ;">Meet our team to serve you</p>
         </div>
 
         <div>
-            <button>About Us</button> 
-            <button>Contact</button> 
+            <button type="Go to about us page" style="background: #2626b2;">About Us</button> 
+            <button type="Go to contact us page" style="background: white; color: bisque;">Contact</button> 
         </div><br><br>
         <div>
             <div>
